--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
     <div class="front pocket"></div>
 
     <div class="letter">
-      <p><strong>Para ti 💌</strong></p>
+      <p><strong>Para: Veronica 💌</strong></p>
       <p>Llegaste sin aviso</p>
       <p>y te quedaste en mi corazón.</p>
-      <p>Gracias por existir ✨</p>
+      <p>Te amo mi Princesa ✨</p>
     </div>
   </div>
 
@@ -151,3 +151,4 @@
 
 </body>
 </html>
+
