--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- 🔴 CLAVE PARA CELULAR -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Para Ti 💖</title>
+  <title>Para: Veronica💖</title>
 
   <!-- Fuente -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -121,8 +121,8 @@
 
     <div class="letter">
       <p><strong>Para: Veronica 💌</strong></p> 
-<p>Llegaste sin aviso</p> 
-<p>y te quedaste en mi corazón.</p> 
+<p>Llegaste sin aviso y te </p> 
+<p>quedaste en mi corazón.</p> 
 <p>Te amo mi Princesa ✨</p>
  </div> 
 </div>
@@ -151,3 +151,4 @@
 
 </body>
 </html>
+
