--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
       color: #c2185b;
       display: none;
     }
+    .letter p {
+  margin: 3px 0;
+  line-height: 1.25;
+}
   </style>
 </head>
 
@@ -151,4 +155,5 @@
 
 </body>
 </html>
+
 
